syntax = "proto3";

package proto;

option go_package = "shared/proto;proto";

service UserService {
  rpc SignInUser (SignInRequest) returns (SignInResponse) {}
  rpc SignUpUser (SignUpRequest) returns (SignInResponse) {}
  rpc SignOutUser (SignOutRequest) returns (SignOutResponse) {}
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
  string repeat_password = 3;
}

message SignOutRequest {
  string session_id = 1;
}

message SignInResponse {
  string session_id = 1;
}

message SignOutResponse {
  bool success = 1;
}